# miniplane

./: Cargo.toml  README.md
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: keyword_ability.md
src/: ability.rs  attack_target.rs  attackable.rs  attacker.rs  creature.rs  lib.rs  main.rs  permanent.rs  player.rs
src/ability/: deathtouch.rs
