[package]
name = "miniplane"
version = "0.1.0"
authors = ["Roadagain <ringoh72@gmail.com>"]
edition = "2018"

[dependencies]

[dev-dependencies]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-fmt", "run-cargo-clippy"]
